--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,32 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: configure
       run: bin/setup
+
     - name: make
       run: bin/build
+
+    - name: create release
+      id: create_release
+      uses: actions/create-release@v1.0.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: false
+        prerelease: false
+      if: startsWith(github.ref, 'refs/tags/')
+
+    - name: Upload release asset
+      uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: .build/ergodox_ez_maxmeyer.hex
+        asset_name: ergodox_ez_maxmeyer.hex
+        asset_content_type: application/octet-stream
+      if: startsWith(github.ref, 'refs/tags/')
