--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         release_name: Release ${{ github.ref }}
         draft: false
         prerelease: false
-      if: startsWith(github.ref, 'refs/tags/')
+      # if: startsWith(github.ref, 'refs/tags/')
 
     - name: upload release asset
       uses: actions/upload-release-asset@v1.0.1
@@ -41,4 +41,4 @@ jobs:
         asset_path: .build/ergodox_ez_maxmeyer.hex
         asset_name: ergodox_ez_maxmeyer.hex
         asset_content_type: application/octet-stream
-      if: startsWith(github.ref, 'refs/tags/')
+      # if: startsWith(github.ref, 'refs/tags/')
