--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: .build/ergodox_ez_maxmeyer.hex
+        asset_path: tmp/qmk_firmware/ergodox_ez_maxmeyer.hex
         asset_name: ergodox_ez_maxmeyer.hex
         asset_content_type: application/octet-stream
       # if: startsWith(github.ref, 'refs/tags/')
